--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Docker\\" : "app/Providers/Docker/"
         }
     },
     "autoload-dev": {
